src/test/resources/public/input/typechecking/fail/incompatible_return/fail05.jova
class Cls {

}

class Test{

	public Cls cls1;
	
    public int func1(){
        return 0;
    }
	
	public bool func2(){
        return false;
    }

}

class Test2 {
  public int main() {
    Test t;
    t = new Test;
    return t.cls1;
  }
  
}
